# apiary

./: Cargo.toml  README.md
.github/workflows/: ci.yml
apiary/: Cargo.toml
apiary-macro/: Cargo.toml
apiary-macro/src/: attr_apiary.rs  lib.rs
apiary-macro/src/attr_apiary/: extract.rs  fixture.rs  parse.rs  server.rs
apiary/examples/: pets.rs
apiary/src/: body.rs  closed.rs  error.rs  internal_helper.rs  lib.rs  request.rs  response.rs  router.rs  server.rs  service.rs
apiary/src/response/: body.rs
apiary/src/server/: error.rs  with_hyper.rs
apiary/src/service/: limit_content_length.rs  stringify_body.rs
