[package]
name = "apiary-macro"
version = "0.1.0"
authors = ["HyeonuPark <nemo1275@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Macros for the apiary crate"
repository = "https://github.com/HyeonuPark/apiary"
documentation = "https://docs.rs/apiary-macro"
readme = "README.md"
categories = []

[lib]
proc-macro = true

[dependencies]
syn = { version = "1", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
proc-macro-error = "1"
http = "0.2"
